<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vaclavhnizda.groupsecretsanta.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="18sp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="5">

            <Button
                android:text="@string/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>

            <Button
                android:text="@string/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>

            <Button
                android:text="@string/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>

            <Button
                android:text="@string/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>

            <Button
                android:text="@string/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>

            <Button
                android:text="@string/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>

            <Button
                android:text="@string/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button7"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>

            <Button
                android:text="@string/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button8"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"/>
        </GridLayout>
    </LinearLayout>

</RelativeLayout>
